--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ before_install:
 - gem install xcpretty
 - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/VoucherifySwiftSdk.xcworkspace -scheme VoucherifySwiftSdk-Example -destination name="iPhone 6" ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/VoucherifySwiftSdk.xcworkspace -scheme VoucherifySwiftSdk-Example -destination 'platform=iOS Simulator,name=iPhone 6,OS=10.1" ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
