--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@
 # * https://github.com/supermarin/xcpretty#usage
 
 osx_image: xcode8.2
-language: swift
+xcode_sdk: iphonesimulator10.1
+language: objective-c
 # cache: cocoapods
 podfile: Example/Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
+- gem install xcpretty
 - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/VoucherifySwiftSdk.xcworkspace -scheme VoucherifySwiftSdk-Example -sdk iphonesimulator10.1 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/VoucherifySwiftSdk.xcworkspace -scheme VoucherifySwiftSdk-Example -destination 'platform=iOS Simulator,name=iPhone 6,OS=10.1' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
