--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - gem install xcpretty
 - pod install --project-directory=Example
+- pod update Alamofire
+- pod update ObjectMapper
 script:
 - set -o pipefail && xcodebuild test -workspace Example/VoucherifySwiftSdk.xcworkspace -scheme VoucherifySwiftSdk-Example -destination 'platform=iOS Simulator,name=iPhone 6,OS=10.1' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
