--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,15 @@ xcode_sdk: iphonesimulator12.0
 language: swift
 # cache: cocoapods
 podfile: Example/Podfile
+
 before_install:
-- gem install cocoapods # Since Travis is not always on latest version
 - gem install xcpretty
-- pod install --project-directory=Example
+- gem install cocoapods # Since Travis is not always on latest version
 - pod repo update
-- pod update Alamofire
-- pod update ObjectMapper
+- pod install Alamofire
+- pod install ObjectMapper
+- pod install --project-directory=Example
+
 script:
 - set -o pipefail && xcodebuild test -workspace Example/VoucherifySwiftSdk.xcworkspace -scheme VoucherifySwiftSdk-Example -destination 'platform=iOS Simulator,name=iPhone 8,OS=12.0' ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
